--------------------------------------------------------------------------------
Therion 5.3 (YYYY-MM-DD):

therion:
 * georeferencing data added to pdf maps
 * support for splay shots without station names
 * bugs fixed:
   - BCRA3 and BCRA5 survey grades fixed
   - missing altitudes in cave list
   - atlas page exclusion
   - map header positioning using real numbers
   
xtherion:

 * script for creation of OziExplorer MAP files for georeferenced maps (Help->Calibrate bitmap)
 * added import functions for PocketTopo export
   - centerline in text editor - File->Import->PocketTopo therion export
   - sketches in map editor - Backgroud Images->Insert->PocketTopo therion export
 * bugs fixed: 
   - 
   
loch:

 * added Tools->Options->Measurement system setup
 * bugs fixed: 
   - 

--------------------------------------------------------------------------------
Therion 5.2 (2008-08-07):

therion:
 * statistics of explored but not yet surveyed passages. Just specify 
   `-explored <length>' to point continuation or add `explored <length>' to
   station flags and this length will be used in survey/cave statistics.
 * new handling of user defined symbols (including legend)
 * improved station flags handling. Added new flags for stations: sink, spring,
   doline, dig, air-draught(:winter|summer). Also `not' is supported before flag.
   User defined attributes may be added to stations using flag `attr' followed
   by attribute name and value.
 * station flags can be turned on|off using layout:
   symbol-show|hide point flag:entrance|continuation|sink|spring|doline|dig...
 * added `splay' and  `approx[imate]' survey shot flag
 * grid labeling using coordinates - layout option grid-coords off|border|all
 * ability to color labels by scrap color using `color labels on|off' in layout
 * user can change translation of therion texts at runtime using `text'
   option in configuration or initialization files