@@ -390,7 +390,8 @@ endlayout|
     The points with distance changed most during transformation are displayed
     orange. If |scrap-names| is specified, scrap names are shown for each scrap,
     |station-names| displays name of each survey station.
-  * survey-level <N/all> = how many surveys to display with stations.
+  * |survey-level <N/all>| = |N| is the number of survey levels displayed 
+                             next to the station name (M, A; default: |0|).
 
   {\it PDF related:}\Nobreak
 
