@@ -1,1 +1,1 @@
-5.2.3
+5.2.4
