@@ -336,7 +336,7 @@ const char * thmpost_library =
 "\n"
 "def process_label (expr cent, rot) =\n"
 "  begingroup\n"
-"    bboxmargin:=0.8bp;\n"
+"    interim bboxmargin:=0.8bp;\n"
 "    q:=((bbox lab) smoothed 2) rotatedaround (cent, rot);\n"
 "    draw lab rotatedaround (cent, rot);\n"
 "    write_circ_bbox(q);  % without corners smoothing it was enough to use\n"
@@ -768,6 +768,27 @@ const char * thmpost_library =
 "enddef;\n"
 "\n"
 "%%%\n"
+"\n"
+"% comment out groups in order to use 'save ATTR_*' appropriately\n"
+"\n"
+"def beginfig(expr c) =\n"
+"%  begingroup\n"
+"  charcode:=c;\n"
+"  clearxy; clearit; clearpen;\n"
+"  pickup defaultpen;\n"
+"  drawoptions();\n"
+"  scantokens extra_beginfig;\n"
+"  \n"
+"  save smartll, smartur; \n"
+"  pair smartll[], smartur[]; \n"
+"  smart_count := 0;\n"
+"enddef;\n"
+"\n"
+"def endfig =\n"
+"  scantokens extra_endfig;\n"
+"  shipit;\n"
+"%  endgroup\n"
+"enddef;\n"
 "\n"
 "\n"
 "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n"
@@ -1734,7 +1755,10 @@ const char * thmpost_library =
 "    pickup PenX;\n"
 "    if i=\"entrance\":\n"
 "      thdraw path_cave;\n"
-"      p_label.urt(txt,pos+(0.4u,0),0,0);\n"
+"%      p_label.urt(txt,pos+(0.4u,0),0,0);\n"
+"      if not numeric txt:\n"
+"        p_smartlabel(txt,pos);\n"
+"      fi;\n"
 "    elseif i=\"sink\":\n"
 "      thdraw path_cave cutbefore ((-u,0)--(u,0)) cutafter ((-u,0)--(u,0));\n"
 "      pickup PenA;\n"
@@ -1889,6 +1913,7 @@ const char * thmpost_library =
 "    cas := cas + mojkrok;\n"
 "    exitif cas > dlzka - (2*mojkrok/3); % for rounding errors\n"
 "  endfor;\n"
+"  pickup PenA;  \n"
 "  thdraw P;\n"
 "enddef;\n"
 "\n"
@@ -1946,6 +1971,7 @@ const char * thmpost_library =
 "    cas := cas + mojkrok;\n"
 "    exitif cas > dlzka - (2*mojkrok/3); % for rounding errors\n"
 "  endfor;\n"
+"  pickup PenA;  \n"
 "  thdraw P;\n"
 "enddef;\n"
 "\n"
@@ -3144,6 +3170,74 @@ const char * thmpost_library =
 "  elseif mode=8: process_filledlabel(pos, rot);\n"
 "  else: process_label(pos,rot); fi;\n"
 "enddef;\n"
+"\n"
+"\n"
+"% at beginfig: save smartll[], smartur[]; pair smartll[], smartur[]; smart_count=0;\n"
+"numeric smart_count, smart_D;\n"
+"boolean smart_quit, smart_inner_quit;\n"
+"\n"
+"def p_smartlabel (expr txt, pos) =\n"
+"%  begingroup;\n"
+"  interim bboxmargin:=0.2pt;\n"
+"  lab:=thelabel.rt(txt,pos+(0.4u,0));\n"
+"  q:=bbox lab;\n"
+"  smart_D := 0;\n"
+"  forever:\n"
+"    smart_quit := true;\n"
+"    smart_inner_quit := false;\n"
+"    for i=1 upto smart_count:\n"
+"      if smart_overlap(((point 0 of q) shifted (0,smart_D)), \n"
+"                       ((point 2 of q) shifted (0,smart_D)),\n"
+"                       smartll[i], smartur[i]) = 1:\n"
+"        smart_quit := false;\n"
+"        smart_D := smart_D - 3pt;\n"
+"        smart_inner_quit := true;\n"
+"      fi;\n"
+"      exitif smart_inner_quit;\n"
+"    endfor;\n"
+"    exitif smart_quit;\n"
+"  endfor;\n"
+"  smart_U := 0;\n"
+"  forever:\n"
+"    smart_quit := true;\n"
+"    smart_inner_quit := false;\n"
+"    for i=1 upto smart_count:\n"
+"      if smart_overlap(((point 0 of q) shifted (0,smart_U)), \n"
+"                       ((point 2 of q) shifted (0,smart_U)),\n"
+"                       smartll[i], smartur[i]) = 1:\n"
+"        smart_quit := false;\n"
+"        smart_U := smart_U + 3pt;\n"
+"        smart_inner_quit := true;\n"
+"      fi;\n"
+"      exitif smart_inner_quit;\n"
+"    endfor;\n"
+"    exitif smart_quit;\n"
+"  endfor;\n"
+"  if (smart_U < -smart_D): smart_D := smart_U; fi;\n"
+"  draw lab shifted (0,smart_D);\n"
+"  if (abs(smart_D)>3pt):\n"
+"    pickup PenB;\n"
+"    draw pos{left}..{right}(pos shifted (.4u, smart_D)) dashed withdots scaled 0.2;\n"
+"    pickup PenA;\n"
+"    drawdot pos;\n"
+"  fi;\n"
+"  smart_count := smart_count + 1;\n"
+"  smartll[smart_count] := point 0 of (q shifted (0,smart_D));\n"
+"  smartur[smart_count] := point 2 of (q shifted (0,smart_D));\n"
+"%  endgroup;\n"
+"enddef;\n"
+"\n"
+"def smart_overlap (expr llA, urA, llB, urB) =\n"
+"  if ((xpart llA < xpart urB) and (xpart urA > xpart llB)) and\n"
+"     ((ypart llA < ypart urB) and (ypart urA > ypart llB)):\n"
+"    1\n"
+"  else:\n"
+"    0 \n"
+"  fi\n"
+"enddef;\n"
+"\n"
+"\n"
+"\n"
 "\n"
 "def p_wallaltitude (expr pprev,pos,pnext,txt) =\n"
 "  rot:=angle(unitvector(pnext-pos)+unitvector(pos-pprev)) - 90;\n"
