@@ -505,7 +505,7 @@ proc xth_me_imgs_xvi_create {imgx} {
   # sketch lines
   set sklns $xth(me,imgs,$imgx,XVIsketchlines)
   for {set i 0} {$i < [llength $sklns]} {incr i} {
-    set cid [$xth(me,can) create line 0 0 1 1 -fill $xth(gui,xvi_shot_clr) -width 1 -state hidden -tags [list $id [format "%sSKLN%d" $id $i]]]
+    set cid [$xth(me,can) create line 0 0 1 1 -fill [lindex [lindex $sklns $i] 0] -width 1 -state hidden -tags [list $id [format "%sSKLN%d" $id $i]]]
     xth_me_bind_area_drag $cid $imgx
     xth_me_bind_image_drag $cid $imgx
     lappend xth(me,imgs,$imgx,subimgs) [list {} $cid]
